--- a/AnnuaireAgro/MainWindow.xaml
+++ b/AnnuaireAgro/MainWindow.xaml
@@ -2,32 +2,34 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
        
-        Title="AnnuaureAgro" Height="600" Width="800">
+        Title="AnnuaireAgro" Height="600" Width="800"  Background="#FF060621">
 
 
-    <Grid Background="#FF040423" Margin="0,0,10,0">
+    <Grid Margin="0,0,10,0">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="483*"/>
+            <ColumnDefinition Width="307*"/>
+        </Grid.ColumnDefinitions>
 
-       
-            <Menu HorizontalAlignment="Center" Grid.Row="0" Grid.Column="0" Background="#FF184E57" VerticalAlignment="Top" >
-
-                <MenuItem Foreground="White" FontSize="14px"  Padding="20" Margin="20 0 0 0"  Header="Collaborateur" Click="Collaborateur_Click" />
-                <MenuItem Foreground="White" FontSize="14px"  Padding="20" Margin="60 0 20 0"  Header="Sites" Click="Sites_Click" />
-                <MenuItem Foreground="White" FontSize="14px"  Padding="20" Margin="60 0 20 0"  Header="Services" Click="Services_Click" />
-            </Menu>
-     
-        
-        <Frame Grid.Row="1" x:Name="Main" Margin="0, 35, 0, 0"/>
-        
         <Grid.RowDefinitions>
-            <RowDefinition Height="68*"/>
-            <RowDefinition Height="405*"/>
+            <RowDefinition Height="65*"/>
+            <RowDefinition Height="519*"/>
         </Grid.RowDefinitions>
 
-        
-       
+        <TextBox HorizontalAlignment="Left" Height="35" Margin="10,10,0,0" VerticalAlignment="Top" Width="99" KeyDown="TextBox_KeyDown" Background="{x:Null}" BorderBrush="{x:Null}"/>
+
+        <Image x:Name="logo" Source="C:\DEV\AnnuaireAgro\img\logo.png" Margin="322,9,15,362" Grid.Row="1"/>
+
+
+
+        <TextBlock x:Name="txtbAccueil" Text="Bienvenu(e), veuillez cliquer sur le bouton ci-dessous pour accèder à l'annuaire du personnel" TextAlignment="Center" TextWrapping="Wrap" Foreground="#FF50C1C1" Margin="0,195,0,227" Grid.Row="1" FontSize="24" HorizontalAlignment="Center" Width="566" Grid.ColumnSpan="2"></TextBlock>
+        <Frame x:Name="Main" Margin="10,65,10,32" NavigationUIVisibility="Hidden" Grid.ColumnSpan="2" Grid.RowSpan="2" />
+
+        <Button x:Name="btnCollab" Content="Collaborateurs" Background="#FF246887" Margin="335,313,28,165" Grid.Row="1" Foreground="#FFD2F1F0" FontSize="14" BorderBrush="#FF439C98" Click="btnCollab_Click"/>
+
+
 
     </Grid>
 </Window>
 
 
-<!--<TextBlock HorizontalAlignment="Center" FontSize="25px" Content="Bienvenu(e) dans l'Annuaire Agro" FontStyle="Italic" Grid.Row="1" Foreground="#FFF3DCDC" Margin="0,177,0,176" Width="388"/>-->
