--- a/AnnuaireAgro/MainWindowAdmin.xaml
+++ b/AnnuaireAgro/MainWindowAdmin.xaml
@@ -1,31 +1,30 @@
-﻿<Window x:Class="AnnuaireAgro.MainWindowAdmin"
+﻿<Page x:Class="AnnuaireAgro.MainWindowAdmin"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 
-        Title="MainWindowAdmin" Height="1000" Width="600">
-    
+        Title="MainWindowAdmin" Height="800" Width="1000">
+
     <Grid Background="#FF040423" Margin="0,0,10,0">
 
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="68*"/>
-            <RowDefinition Height="405*"/>
+            <RowDefinition Height="71*"/>
+            <RowDefinition Height="729*"/>
         </Grid.RowDefinitions>
 
+        <Menu HorizontalAlignment="Center" Background="#FF184E57" VerticalAlignment="Center" Height="71" Width="483" >
 
-        <!--<Menu Grid.Row="0" Grid.Column="0" Background="#FF184E57" VerticalAlignment="Top" >
-
-            <MenuItem Foreground="White" FontSize="14px"  Padding="20" Margin="60 0 0 0"  Header="Collaborateur" Click="Collaborateur_Click" />
-            <MenuItem Foreground="White" FontSize="14px"  Padding="20" Margin="60 0 0 0"  Header="Sites" Click="Sites_Click" />
-            <MenuItem Foreground="White" FontSize="14px"  Padding="20" Margin="60 0 0 0"  Header="Services" Click="Services_Click" />
-        </Menu>-->
+            <MenuItem Foreground="White" FontSize="14px"  Padding="20" Margin="20 0 0 0"  Header="Collaborateur" Click="Collaborateur_Click" />
+            <MenuItem Foreground="White" FontSize="14px"  Padding="20" Margin="60 0 20 0"  Header="Sites" Click="Sites_Click" />
+            <MenuItem Foreground="White" FontSize="14px"  Padding="20" Margin="60 0 20 0"  Header="Services" Click="Services_Click" />
+        </Menu>
 
 
-        <Frame Grid.Row="1" x:Name="Main" Margin="0, 35, 0, 0"/>
-
+        <Frame Grid.Row="1" x:Name="Main" Margin="22,10,22,30"/>
 
     </Grid>
-</Window>
+
+</Page>
 
 
 
