--- a/AnnuaireAgro/Views/Service.xaml
+++ b/AnnuaireAgro/Views/Service.xaml
@@ -1,22 +1,52 @@
 ﻿<Page x:Class="AnnuaireAgro.Views.Service"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:AnnuaireAgro.Views"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      xmlns:Views="clr-namespace:AnnuaireAgro.Views"
       Title="Service">
 
-    <Grid Background="#FF040423" Margin="0,0,10,-23">
+    <Grid Background="#FF040423" Margin="0,0,10,-23" Height="507">
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="300.142"/>
+            <ColumnDefinition Width="290"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+
+
         <Grid.RowDefinitions>
-            <RowDefinition/>
+            <RowDefinition Height="64*"/>
+            <RowDefinition Height="410*"/>
+            <RowDefinition Height="33*"/>
         </Grid.RowDefinitions>
-        <DataGrid ItemsSource="{Binding ListeServices}" DisplayMemberPath="Nom" Margin="45,115,474,25" Background="#FFA5DCD5"/>
-        <DataGrid Margin="451,115,68,22" Background="#FFA5DCD5"/>
-        <Label Content="Liste des Services" Foreground="White" Margin="123,75,552,347"/>
-        <Label Content="Liste des collaborateurs associés au Service" Foreground="White" Margin="468,75,84,347"/>
-        <Label Content="Label" Margin="0,65,0,0"/>
+
+        <Views:ucService Grid.Column="1" DataContext="{Binding ServiceSelected}" Margin="17,35,16,264" Grid.Row="1"/>
+
+
+        <ListBox x:Name="ListeServices" DisplayMemberPath="Nom" Margin="56,19,55,11" Background="#FFA5DCD5" Grid.Row="1" SelectionChanged="ListeServices_SelectionChanged"/>
+        <ListBox x:Name="ListeServicesassoc"
+                 Margin="49,19,35,7" Background="#FFA5DCD5" 
+                 Grid.Column="2" Grid.Row="1">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal" >
+                        <TextBlock Text="{Binding Id}" Visibility="Hidden"></TextBlock>
+                        <TextBlock Text="{Binding Nom}"></TextBlock>
+                        <TextBlock Text="{Binding Prenom}" Margin=" 10 0 0 0 "></TextBlock>
+                    </StackPanel>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+        <Label Content="Liste des Services" Foreground="White" Margin="100,14,99,16"/>
+        <Label HorizontalAlignment="Left" Content="Liste des collaborateurs associés au Service" Foreground="White" Margin="10,14,0,24" Grid.Column="2" Width="238"/>
+
+        <!--Stack Pannel contenant les boutons pour le CRUD-->
+        <StackPanel Orientation="Vertical" Grid.Row="1" Grid.Column="1" 
+                    HorizontalAlignment="Center" Margin="0,0,0,40" VerticalAlignment="Center">
+            <Button x:Name="newCollab" Content="Créer" MinWidth="100" Margin="10,5,0,10" Background="#FF246887" Foreground="White"/>
+
+            <Button Content="Enregistrer" Command="{Binding SaveCommand}" MinWidth="100" Margin="10,5,0,10" Background="#FF246887" Foreground="White"/>
+            <Button Content="Supprimer" Command="{Binding DeleteCommand}" MinWidth="100" Margin="10,5,0,0" Background="#FF246887" Foreground="White"/>
+        </StackPanel>
 
     </Grid>
 </Page>
