--- a/AnnuaireAgro/Views/Site.xaml
+++ b/AnnuaireAgro/Views/Site.xaml
@@ -3,9 +3,12 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
      xmlns:Views="clr-namespace:AnnuaireAgro.Views"
       Title="Site">
+
+    <!--Définition des colonnes et lignes de la grille-->
+
     <Grid Background="#FF040423" Height="378" Width="500">
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto" MinHeight="61.96"/>
             <RowDefinition Height="61*"/>
             <RowDefinition Height="18*"/>
         </Grid.RowDefinitions>
@@ -16,19 +19,19 @@
         </Grid.ColumnDefinitions>
 
 
-
-        <ListBox ItemsSource="{Binding ListeSites, UpdateSourceTrigger=PropertyChanged}" DisplayMemberPath="Ville" Grid.Row="1" Margin="30,37,15,2" Background="#FFA5DCD5"/>
-
         <Label Content="Liste des Sites" Foreground="White" Margin="30,18,24,18" RenderTransformOrigin="0.5,0.5"/>
 
+        <ListBox x:Name="ListSite" ItemsSource="{Binding ListeSites, UpdateSourceTrigger=PropertyChanged}" DisplayMemberPath="Ville" Grid.Row="1" Margin="30,37,15,2" Background="#FFA5DCD5"/>
+
         <Views:ucSite Grid.Row="1" Grid.Column="2" DataContext="{Binding SiteSelected}" Margin="10,10,12,26"/>
+        
 
         <!--Stack Pannel contenant les boutons pour le CRUD-->
         <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="2" 
                     HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="25" Width="330">
             <Button x:Name="new" Content="Créer"  MinWidth="100" Margin="10,5,0,0" Background="#FF246887" Foreground="White" Click="new_Click"/>
 
-            <Button Content="Enregistrer" Command="{Binding SaveCommand}" MinWidth="100" Margin="10,5,0,0" Background="#FF246887" Foreground="White"/>
+            <Button Content="Modifier" Command="{Binding SaveCommand}" MinWidth="100" Margin="10,5,0,0" Background="#FF246887" Foreground="White"/>
             <Button Content="Supprimer" Command="{Binding DeleteCommand}" MinWidth="100" Margin="10,5,0,0" Background="#FF246887" Foreground="White"/>
         </StackPanel>
 
