--- a/AnnuaireAgro/MainWindow.xaml
+++ b/AnnuaireAgro/MainWindow.xaml
@@ -2,30 +2,22 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
        
-        Title="AnnuaireAgro" Height="600" Width="800"  Background="#FF060621">
+        Title="AnnuaireAgro" Height="600" Width="800"  Background="#FF060621" MinHeight="400" MinWidth="600">
 
 
-    <Grid Margin="0,0,10,0">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="483*"/>
-            <ColumnDefinition Width="307*"/>
-        </Grid.ColumnDefinitions>
+    <Grid Margin="0,0,0,0">
 
-        <Grid.RowDefinitions>
-            <RowDefinition Height="43*"/>
-            <RowDefinition Height="541*"/>
-        </Grid.RowDefinitions>
 
-        <TextBox HorizontalAlignment="Left" Height="35" Margin="10,0,0,0" VerticalAlignment="Center" Width="99" KeyDown="TextBox_KeyDown" Background="{x:Null}" BorderBrush="{x:Null}"/>
+        <TextBox HorizontalAlignment="Left" Height="35" Margin="10,10,0,0" VerticalAlignment="Top" Width="99" KeyDown="TextBox_KeyDown" Background="{x:Null}" BorderBrush="{x:Null}" Grid.Row="1"/>
 
-        <Image x:Name="logo" Source="C:\DEV\AnnuaireAgro\img\logo.png" Margin="322,9,15,362" Grid.Row="1"/>
+        <Image VerticalAlignment="Top" HorizontalAlignment="Center" x:Name="logo" Source="C:\DEV\AnnuaireAgro\img\logo.png" Height="202" Width="172" Margin="0,52,0,0" />
 
 
 
-        <TextBlock x:Name="txtbAccueil" Text="Bienvenu(e), veuillez cliquer sur le bouton ci-dessous pour accèder à l'annuaire du personnel" TextAlignment="Center" TextWrapping="Wrap" Foreground="#FF50C1C1" Margin="112,195,0,227" Grid.Row="1" FontSize="24" HorizontalAlignment="Left" Width="566" Grid.ColumnSpan="2"></TextBlock>
-        <Frame x:Name="Main" Margin="10,0,10,0" NavigationUIVisibility="Hidden" Grid.ColumnSpan="2" Height="562" VerticalAlignment="Bottom" Grid.RowSpan="2" />
+        <TextBlock x:Name="txtbAccueil" Text="Bienvenu(e), veuillez cliquer sur le bouton ci-dessous pour accèder à l'annuaire du personnel" TextAlignment="Center" TextWrapping="Wrap" Foreground="#FF50C1C1" VerticalAlignment="Center" FontSize="24" HorizontalAlignment="Center" Width="566"/>
+        <Frame x:Name="Main" Margin="0,20,0,0" NavigationUIVisibility="Hidden" Height="auto" VerticalAlignment="Top" Grid.Row="1" />
 
-        <Button x:Name="btnCollab" Content="Collaborateurs" Background="#FF246887" Margin="335,313,28,165" Grid.Row="1" Foreground="#FFD2F1F0" FontSize="14" BorderBrush="#FF439C98" Click="btnCollab_Click"/>
+        <Button x:Name="btnCollab" Margin="0 0 0 40" Content="Collaborateurs" Background="#FF246887" Foreground="#FFD2F1F0" FontSize="14" BorderBrush="#FF439C98" Click="btnCollab_Click" HorizontalAlignment="Center" VerticalAlignment="Bottom" />
 
 
 
