--- a/AnnuaireAgro/Views/Collaborateur.xaml
+++ b/AnnuaireAgro/Views/Collaborateur.xaml
@@ -1,10 +1,10 @@
 ﻿<Page x:Class="AnnuaireAgro.Views.Collaborateur"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-         xmlns:Views="clr-namespace:AnnuaireAgro.Views"
+      xmlns:Views="clr-namespace:AnnuaireAgro.Views"
       
    
-      Title="Collaborateur" HorizontalAlignment="Center">
+      Title="Collaborateur">
 
     <Grid>
         <Grid.RowDefinitions>
@@ -18,12 +18,12 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <Button x:Name="accueil" Content="Accueil" Background="#FF246887" Click="accueil_Click" Margin="26,10,26,11" MaxHeight="30"></Button>
+        <Button x:Name="accueil" Content="Accueil" Background="#FF246887" Click="accueil_Click" Margin="26,05,26,10" MaxHeight="30"></Button>
         <!--Barres de Recherche-->
         <StackPanel Orientation="Horizontal" Grid.Row="0" Grid.Column="2" 
                     HorizontalAlignment="Center"  VerticalAlignment="Center" Margin="0 5 0 10 ">
             <TextBlock Text=" Nom" VerticalAlignment="Center" Margin="5" Foreground="White"/>
-            <TextBox Text="{Binding CollaborateurFilter, UpdateSourceTrigger=PropertyChanged}" Width="100" VerticalAlignment="Center"/>
+            <TextBox Text="{Binding CollaborateurFiltrer, UpdateSourceTrigger=PropertyChanged}" Width="100" VerticalAlignment="Center"/>
             <TextBlock Text=" Site" VerticalAlignment="Center" Margin="5" Foreground="White"/>
             <TextBox  Width="100" VerticalAlignment="Center"/>
             <TextBlock Text="Fonction" VerticalAlignment="Center" Margin="5" Foreground="White"/>
@@ -45,7 +45,7 @@
             </ListBox.ItemTemplate>
         </ListBox>
 
-        <Views:ucCollabAdmin Grid.Row="1" Grid.Column="2" DataContext="{Binding CollaborateurSelected}" Margin="0 0 0 20"/>
+        <Views:ucCollaborateur Grid.Row="1" Grid.Column="2" DataContext="{Binding CollaborateurSelected}" Margin="0 0 0 90"/>
 
       
 
