--- a/AnnuaireAgro/Views/ucCollabAdmin.xaml
+++ b/AnnuaireAgro/Views/ucCollabAdmin.xaml
@@ -6,10 +6,13 @@
              xmlns:local="clr-namespace:AnnuaireAgro.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+
+    <!--Définition des colonnes et lignes de la grille-->
+
     <Grid>
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -42,8 +45,8 @@
         <TextBox Grid.Column="2" Grid.Row="3" Margin="0 10 0 0" Text="{Binding TelFixe, UpdateSourceTrigger=PropertyChanged}" />
         <TextBox Grid.Column="2" Grid.Row="4" Margin="0 10 0 0" Text="{Binding TelPortable, UpdateSourceTrigger=PropertyChanged}" />
         <TextBox Grid.Column="2" Grid.Row="5" Margin="0 10 0 0" Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}" />
-        <TextBox x:Name="txtSite"   Text="{Binding Site.Ville, UpdateSourceTrigger=PropertyChanged}" Grid.Column="2" Grid.Row="6" Margin="0 20 0 0"  />
-        <TextBox x:Name="txtService" Text="{Binding Service.Nom, UpdateSourceTrigger=PropertyChanged}"  Grid.Column="2" Grid.Row="7" Margin="0 20 0 5" />
+        <TextBox x:Name="txtSite"   Text="{Binding FK_idSite , UpdateSourceTrigger=PropertyChanged}" Grid.Column="2" Grid.Row="6" Margin="0 10 0 0"  />
+        <TextBox x:Name="txtService" Text="{Binding FK_idService, UpdateSourceTrigger=PropertyChanged}"  Grid.Column="2" Grid.Row="7" Margin="0 10 0 0" />
 
 
     </Grid>
