--- a/AnnuaireAgro/Views/ucCollaborateur.xaml
+++ b/AnnuaireAgro/Views/ucCollaborateur.xaml
@@ -7,6 +7,10 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
 
+    
+    <!--Définition des colonnes et lignes de la grille-->
+
+
     <Grid>
         
             <Grid.RowDefinitions>
@@ -29,22 +33,22 @@
             </Grid.ColumnDefinitions>
 
 
-            <Label Grid.Column="1" Grid.Row="1" Margin="0 20 0 0" Content="Nom" Foreground="White"/>
-        <Label Grid.Column="1" Grid.Row="2" Margin="0 20 0 0" Content="Prénom" Foreground="White" />
-        <Label Grid.Column="1" Grid.Row="3" Margin="0 20 0 0" Content="Fixe" Foreground="White"/>
-        <Label Grid.Column="1" Grid.Row="4" Margin="0 20 0 0" Content="Portable" Foreground="White"/>
-        <Label Grid.Column="1" Grid.Row="5" Margin="0 20 0 0" Content="Email" Foreground="White"/>
-        <Label Grid.Column="1" Grid.Row="6" Margin="0 20 0 0" Content="Site" Foreground="White"/>
-        <Label Grid.Column="1" Grid.Row="7" Margin="0 20 0 0" Content="Service" Foreground="White"/>
+        <Label Grid.Column="1" Grid.Row="1" Margin="0 10 0 0" Content="Nom" Foreground="White"/>
+        <Label Grid.Column="1" Grid.Row="2" Margin="0 10 0 0" Content="Prénom" Foreground="White" />
+        <Label Grid.Column="1" Grid.Row="3" Margin="0 10 0 0" Content="Fixe" Foreground="White"/>
+        <Label Grid.Column="1" Grid.Row="4" Margin="0 10 0 0" Content="Portable" Foreground="White"/>
+        <Label Grid.Column="1" Grid.Row="5" Margin="0 10 0 0" Content="Email" Foreground="White"/>
+        <Label Grid.Column="1" Grid.Row="6" Margin="0 10 0 0" Content="Site" Foreground="White"/>
+        <Label Grid.Column="1" Grid.Row="7" Margin="0 10 0 0" Content="Service" Foreground="White"/>
 
 
-        <TextBox Grid.Column="2" Grid.Row="1" Margin="0 20 0 0" Text="{Binding Nom, UpdateSourceTrigger=PropertyChanged}" />
-        <TextBox Grid.Column="2" Grid.Row="2" Margin="0 20 0 0" Text="{Binding Prenom, UpdateSourceTrigger=PropertyChanged}" />
-        <TextBox Grid.Column="2" Grid.Row="3" Margin="0 20 0 0" Text="{Binding TelFixe, UpdateSourceTrigger=PropertyChanged}" />
-        <TextBox Grid.Column="2" Grid.Row="4" Margin="0 20 0 0" Text="{Binding TelPortable, UpdateSourceTrigger=PropertyChanged}" />
-        <TextBox Grid.Column="2" Grid.Row="5" Margin="0 20 0 0" Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}" />
-        <TextBox x:Name="txtSite"   Text="{Binding Site.Ville, UpdateSourceTrigger=PropertyChanged}" Grid.Column="2" Grid.Row="6" Margin="0 20 0 0"  />
-        <TextBox x:Name="txtService" Text="{Binding Service.Nom, UpdateSourceTrigger=PropertyChanged}"  Grid.Column="2" Grid.Row="7" Margin="0 20 0 0" />
+        <TextBox Grid.Column="2" Grid.Row="1" Margin="0 10 0 0" Text="{Binding Nom, UpdateSourceTrigger=PropertyChanged}" />
+        <TextBox Grid.Column="2" Grid.Row="2" Margin="0 10 0 0" Text="{Binding Prenom, UpdateSourceTrigger=PropertyChanged}" />
+        <TextBox Grid.Column="2" Grid.Row="3" Margin="0 10 0 0" Text="{Binding TelFixe, UpdateSourceTrigger=PropertyChanged}" />
+        <TextBox Grid.Column="2" Grid.Row="4" Margin="0 10 0 0" Text="{Binding TelPortable, UpdateSourceTrigger=PropertyChanged}" />
+        <TextBox Grid.Column="2" Grid.Row="5" Margin="0 10 0 0" Text="{Binding Email, UpdateSourceTrigger=PropertyChanged}" />
+        <TextBox x:Name="txtSite"   Text="{Binding FK_idSite, UpdateSourceTrigger=PropertyChanged}" Grid.Column="2" Grid.Row="6" Margin="0 10 0 0"  />
+        <TextBox x:Name="txtService" Text="{Binding FK_idService, UpdateSourceTrigger=PropertyChanged}"  Grid.Column="2" Grid.Row="7" Margin="0 10 0 0" />
 
 
     </Grid>
