--- a/AnnuaireAgro/Views/ucService.xaml
+++ b/AnnuaireAgro/Views/ucService.xaml
@@ -6,6 +6,9 @@
              xmlns:local="clr-namespace:AnnuaireAgro.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" Width="257">
+
+    <!--Définition des colonnes et lignes de la grille-->
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="87*"/>
@@ -18,6 +21,6 @@
         </Grid.RowDefinitions>
 
         <Label Grid.Column="0" Grid.Row="1" Margin="0 20 0 0" Content="Nom" Foreground="White"/>
-        <TextBox Grid.Column="2" Grid.Row="1" Margin="0 20 0 0" Text="{Binding Ville, UpdateSourceTrigger=PropertyChanged}" />
+        <TextBox Grid.Column="2" Grid.Row="1" Margin="0 20 0 0" Text="{Binding Nom, UpdateSourceTrigger=PropertyChanged}" />
     </Grid>
 </UserControl>
