--- a/AnnuaireAgro/Views/ucSite.xaml
+++ b/AnnuaireAgro/Views/ucSite.xaml
@@ -6,6 +6,10 @@
              xmlns:local="clr-namespace:AnnuaireAgro.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" Width="198">
+    
+
+    <!--Définition des colonnes et lignes de la grille-->
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="87*"/>
@@ -18,6 +22,6 @@
         </Grid.RowDefinitions>
 
         <Label Grid.Column="0" Grid.Row="1" Margin="0 20 0 0" Content="Ville" Foreground="White"/>
-        <TextBox Grid.Column="2" Grid.Row="1" Margin="0 20 0 0" Text="{Binding Ville, UpdateSourceTrigger=PropertyChanged}" />
+        <TextBox x:Name="txtVille" Grid.Column="2" Grid.Row="1" Margin="0 20 0 0" Text="{Binding Ville, UpdateSourceTrigger=PropertyChanged}" />
     </Grid>
 </UserControl>
